fix last item invisible

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -14,7 +14,6 @@
   height: 30px;
 }
 #form {
-  background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
   position: fixed;
   bottom: 0;
@@ -23,7 +22,6 @@
   display: flex;
   height: 3rem;
   box-sizing: border-box;
-  backdrop-filter: blur(10px);
 }
 #input {
   border: none;
@@ -47,8 +45,7 @@
 
 #messages {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  padding: 3rem;
 }
 #messages > li {
   padding: 0.5rem 1rem;
